--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -1,2 +1,2 @@
 echo "SOF2 GOLD EDITION HQ CONFIG"
-echo "DONT change resolution when using SuisFix, breaks desired resolution and brightness"
+echo "DONT change resolution via video settings in-game when using SuisFix, breaks desired resolution and brightness"
