--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -37,6 +37,8 @@ seta cg_marks_add "1"
 seta cg_effectdetail "1.0"
 seta cg_max_tempmodels "1200"
 seta cg_reserve_tempmodels "240"
+seta cg_marks_max "4096"
+seta cg_acidtrip "0"
 
 seta com_hunkmegs "1024"
 seta com_maxfps "125"
@@ -128,7 +130,13 @@ seta ter_maxtri "65535"
 seta ter_minMarkRadiu "8"
 
 seta vss_draw "1"
+seta vss_lighting_fps "125"
 seta vss_maxcount "64"
+seta vss_maxvisible "4096"
+seta vss_physics_fps "125"
+seta vss_repulsion_fps "125"
+
+seta maxentities "4096"
 
 seta sv_voip "0"
 seta sv_pure "1"
