--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -7,6 +7,7 @@ seta cl_run "1"
 seta cl_motd "0"
 seta cl_maxfps "125"
 seta maxfps "125"
+seta fps "125"
 seta cl_maxpackets "125"
 seta cl_packetdup "1"
 seta cl_mouseaccel "0"
@@ -67,9 +68,9 @@ seta r_specularmapping "1"
 seta r_normalmapping "1"
 seta r_ssao "0"
 seta r_depthprepass "1"
-seta r_postprocess "0"
-seta r_hdr "0"
-seta r_tonemap "0"
+seta r_postprocess "1"
+seta r_hdr "1"
+seta r_tonemap "1"
 seta r_autoexposure "0"
 seta r_ext_compressed_textures "1"
 seta r_ext_texture_filter_anisotropic "1"
@@ -111,6 +112,14 @@ seta r_ext_compress_lightmaps "0"
 seta r_lodviewmodelcap "1.0"
 seta r_lodcap "1.0"
 seta r_forceClampToEdge "1"
+seta r_precacheimages "1"
+seta r_sse "1"
+seta r_useglfog "1"
+seta r_farplane_nofog "0"
+seta r_farplane_nocull "1"
+seta r_maxtermarks "4096"
+seta r_nocull "1"
+seta r_geForce3WorkAround "0"
 
 seta r_mode "-1"
 seta r_customwidth "4096"
@@ -123,7 +132,7 @@ seta g_ddayshingleguys "2"
 seta ter_count "0"
 seta ter_cull "0"
 seta ter_error "0.1"
-seta ter_fastMark "0"
+seta ter_fastMarks "0"
 seta ter_lock "0"
 seta ter_maxlod "100"
 seta ter_maxtri "65535"
@@ -135,6 +144,7 @@ seta vss_maxcount "64"
 seta vss_maxvisible "4096"
 seta vss_physics_fps "125"
 seta vss_repulsion_fps "125"
+seta vss_smoothsmokelight "1"
 
 seta maxentities "4096"
 
@@ -143,12 +153,20 @@ seta sv_pure "1"
 seta sv_fps "125"
 seta sv_minrate "25000"
 seta sv_maxrate "0"
+seta sv_precache "1"
+seta sv_gamespy "0"
+seta sv_location "0"
+seta sv_allowDownload "0"
 
-seta s_mixahead "0.05"
+seta s_mixahead "0.045"
 seta s_khz "44"
 seta s_useopenal "1"
 seta s_alprecache "1"
 seta s_sdlbits "16"
+seta s_speaker_type "1"
+
+seta snd_maxdelay "1"
+seta snd_mindelay "1"
 
 seta g_smoothclients "0"
 seta g_enabledust "1"
@@ -164,6 +182,7 @@ seta m_filter "0"
 seta in_mouse "1"
 seta sensitivity "3.5"
 seta name "TyranT"
+seta ui_console "1"
 
 bind mwheelup "+moveup"
 bind mwheeldown "+moveup" 
