--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -1,6 +1,8 @@
 echo "MOHAA HQ CONFIG"
 echo "r_subdivisions 3- will cause map rendering errors"
 echo "r_forceClampToEdge 1 can help with black lines in the main menu and skybox in-game"
+echo "fps 1 draws fps graph"
+echo "r_sse 1 crashes game at loading screen"
 
 seta cl_running "1"
 seta cl_run "1"
