--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -2,3 +2,8 @@ echo "SOF2 GOLD EDITION HQ CONFIG"
 echo "DONT change resolution via video settings in-game when using SuisFix, breaks desired resolution and brightness"
 echo "SuisFix allows clipping on the edges of the screen when up against walls, which allows you to see through walls"
 echo "SoF2-Fixes.ini is used for SuisFix"
+echo "cg_fov 105 requires sv_cheats 1"
+
+sv_cheats 1
+
+cg_fov "105"
