--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -4,6 +4,6 @@ echo "SuisFix allows clipping on the edges of the screen when up against walls, 
 echo "SoF2-Fixes.ini is used for SuisFix"
 echo "cg_fov 105 requires sv_cheats 1"
 
-sv_cheats 1
+set sv_cheats 1
 
-cg_fov "105"
+set cg_fov "105"
