--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -2,8 +2,9 @@ echo "SOF2 GOLD EDITION HQ CONFIG"
 echo "DONT change resolution via video settings in-game when using SuisFix, breaks desired resolution and brightness"
 echo "SuisFix allows clipping on the edges of the screen when up against walls, which allows you to see through walls"
 echo "SoF2-Fixes.ini is used for SuisFix"
+echo "sv_cheats 1 requires setrandom to avoid read only error"
 echo "cg_fov 105 requires sv_cheats 1"
 
-set sv_cheats 1
+setrandom sv_cheats 1
 
 set cg_fov "105"
