--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -1,10 +1,13 @@
 echo "SOF2 GOLD EDITION HQ CONFIG"
 echo "DONT change resolution via video settings in-game when using SuisFix, breaks desired resolution and brightness"
-echo "SuisFix allows clipping on the edges of the screen when up against walls, which allows you to see through walls"
+echo "SuisFix causes clipping on the edges of the screen when up against walls, which allows you to see through walls"
 echo "SoF2-Fixes.ini is used for SuisFix"
+echo "sv_cheats 1 requires +set sv_cheats 1 in shortcut command line parameter"
 echo "sv_cheats 1 requires setrandom to avoid read only error"
-echo "cg_fov 105 requires sv_cheats 1"
+echo "cg_fov 90 requires sv_cheats 1"
+echo "cg_fov 90+ will cause clipping against walls that you can see through when close to them, just like SuisFix" 
 
+set sv_cheats 1
 setrandom sv_cheats 1
 
-set cg_fov "105"
+set cg_fov "90"
