--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -1,6 +1,7 @@
 echo "SOF2 GOLD EDITION HQ CONFIG"
 echo "DONT change resolution via video settings in-game when using SuisFix, breaks desired resolution and brightness"
 echo "SuisFix causes clipping on the edges of the screen when up against walls, which allows you to see through walls"
+echo "RECOMMENDED to install zz_hudcrop_fix.pk3 from SuisFix ONLY, fixes hud crop bug using widescreen resolutions"
 echo "SoF2-Fixes.ini is used for SuisFix"
 echo "sv_cheats 1 requires +set sv_cheats 1 in shortcut command line parameter"
 echo "sv_cheats 1 requires setrandom to avoid read only error"
