--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -11,4 +11,99 @@ echo "cg_fov 90+ will cause clipping against walls that you can see through when
 set sv_cheats 1
 setrandom sv_cheats 1
 
+set com_maxfps "125"
+
+set cl_blankFrames "20"
+set cl_run "1"
+set cl_running "1"
+set cl_sensitivity "5"
+set cl_subtitles "1"
+
+set cg_errordecay "0"
+set cg_footsteps "1"
 set cg_fov "90"
+set cg_numMarks "5000"
+set cg_pccache "1"
+set cg_shadows "3"
+set cg_splashes "1"
+
+set r_allowATIExtensions "1"
+set r_allowExtensions "1"
+set r_allowNvidiaExtensions "1"
+set r_allowWglExtensions "1"
+set r_animSmooth "0"
+set r_colorbits "32"
+set r_depthbits "24"
+set r_detailtextures "1"
+set r_drawfog "2"
+set r_dynamiclight "1"
+set r_ext_anisotropic_level "16"
+set r_ext_compiled_vertex_array "1"
+set r_ext_multisample_avail "1"
+set r_ext_multitexture "1"
+set r_ext_nv_fence_min_mem_per_fence "256"
+set r_ext_nv_fence_num_fences "5000"
+set r_ext_nv_multisample_quality "16"
+set r_ext_nv_multisample_quality_avail "1"
+set r_ext_nv_register_combiners "0"
+set r_ext_nv_vertex_array_range "1"
+set r_ext_nv_vertex_array_range_mem_priority "0.5"
+set r_ext_nv_vertex_array_range_mem_size "999999999"
+set r_ext_texture_filter_anisotropic_avail "1"
+set r_ext_texture_filter_anisotropic_max "16"
+set r_facePlaneCull "0"
+set r_fastsky "0"
+set r_flares "1"
+set r_fullscreen "1"
+set r_imagePersistence "2"
+set r_intensity "1"
+set r_lodbias "-2"
+set r_lodscale "10000"
+set r_mapoverbrightbits "2"
+set r_maxpolys "999999999"
+set r_minpicmip "0"
+set r_MipMaps "0"
+set r_novis "0"
+set r_overBrightBits "1"
+set r_picmip "0"
+set r_singleShader "0"
+set r_stencilbits "8"
+set r_subdivisions "1"
+set r_surfaceSprites "1"
+set r_surfaceWeather "1"
+set r_swapInterval "0"
+set r_terrainTessellate "3"
+set r_texturebits "32"
+set r_textureMode "GL_LINEAR"
+set r_tf_alpha_compressed "GL_COMPRESSED_RGBA_DXT5"
+set r_tf_alpha_uncompressed "GL_RGBA8"
+set r_tf_solid_compressed "GL_COMPRESSED_RGBA_DXT5"
+set r_tf_solid_uncompressed "GL_RGB8"
+set r_uma "0"
+set r_weather "1"
+set r_weEffectFog "1"
+
+set r_mode "-1"
+set r_customwidth "4096"
+set r_customheight "2160"
+set r_customaspect "1"
+
+set s_allowDynamicMusic "1"
+set s_khz "44"
+set s_mixahead "0.045"
+
+set sv_pccache "1"
+
+set m_filter "0"
+set in_mouse "1"
+
+set ui_precache "1"
+
+set card_lodbias "-2"
+
+set cpu_lodbias "-2"
+
+set sys_cpuspeed "5700"
+set sys_memory "32000"
+
+set superfly "0"
