--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -7,6 +7,8 @@ echo "sv_cheats 1 requires +set sv_cheats 1 in shortcut command line parameter"
 echo "sv_cheats 1 requires setrandom to avoid read only error"
 echo "cg_fov 90 requires sv_cheats 1"
 echo "cg_fov 90+ will cause clipping against walls that you can see through when close to them, just like SuisFix" 
+echo "r_animSmooth .5 is default"
+echo "cg_smoothnpcangles 0.7 is default"
 
 set sv_cheats 1
 setrandom sv_cheats 1
@@ -25,6 +27,7 @@ set cg_fov "90"
 set cg_numMarks "5000"
 set cg_pccache "1"
 set cg_shadows "3"
+set cg_smoothnpcangles "0"
 set cg_splashes "1"
 
 set r_allowATIExtensions "1"
