--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -9,6 +9,7 @@ echo "cg_fov 90 requires sv_cheats 1"
 echo "cg_fov 90+ will cause clipping against walls that you can see through when close to them, just like SuisFix" 
 echo "r_animSmooth .5 is default"
 echo "cg_smoothnpcangles 0.7 is default"
+echo "logfile 2 to generate console log"
 
 set sv_cheats 1
 setrandom sv_cheats 1
@@ -42,6 +43,7 @@ set r_drawfog "2"
 set r_dynamiclight "1"
 set r_ext_anisotropic_level "16"
 set r_ext_compiled_vertex_array "1"
+set r_ext_multisample "16"
 set r_ext_multisample_avail "1"
 set r_ext_multitexture "1"
 set r_ext_nv_fence_min_mem_per_fence "256"
@@ -61,9 +63,11 @@ set r_fullscreen "1"
 set r_imagePersistence "2"
 set r_intensity "1"
 set r_lodbias "-2"
+set r_lodCurveError "10000"
 set r_lodscale "10000"
 set r_mapoverbrightbits "2"
 set r_maxpolys "999999999"
+set r_maxTextureSize "0"
 set r_minpicmip "0"
 set r_MipMaps "0"
 set r_novis "0"
@@ -80,6 +84,7 @@ set r_texturebits "32"
 set r_textureMode "GL_LINEAR"
 set r_tf_alpha_compressed "GL_COMPRESSED_RGBA_DXT5"
 set r_tf_alpha_uncompressed "GL_RGBA8"
+set r_tf_lightmap "GL_RGB8"
 set r_tf_solid_compressed "GL_COMPRESSED_RGBA_DXT5"
 set r_tf_solid_uncompressed "GL_RGB8"
 set r_uma "0"
@@ -95,7 +100,10 @@ set s_allowDynamicMusic "1"
 set s_khz "44"
 set s_mixahead "0.045"
 
+set sv_fps "125"
 set sv_pccache "1"
+
+set logfile "0"
 
 set m_filter "0"
 set in_mouse "1"
