--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -17,6 +17,7 @@ setrandom sv_cheats 1
 set com_maxfps "125"
 
 set cl_blankFrames "20"
+set cl_mouseaccel "0"
 set cl_run "1"
 set cl_running "1"
 set cl_sensitivity "5"
@@ -30,6 +31,11 @@ set cg_pccache "1"
 set cg_shadows "3"
 set cg_smoothnpcangles "0"
 set cg_splashes "1"
+
+set com_hunkmegs "1024"
+set com_maxfps "125"
+set com_maxfpsunfocused "125"
+set com_maxfpsminimized "125"
 
 set r_allowATIExtensions "1"
 set r_allowExtensions "1"
@@ -58,6 +64,7 @@ set r_ext_texture_filter_anisotropic_avail "1"
 set r_ext_texture_filter_anisotropic_max "16"
 set r_facePlaneCull "0"
 set r_fastsky "0"
+set r_fixtjunctions "1"
 set r_flares "1"
 set r_fullscreen "1"
 set r_imagePersistence "2"
@@ -73,6 +80,7 @@ set r_MipMaps "0"
 set r_novis "0"
 set r_overBrightBits "1"
 set r_picmip "0"
+set r_roundimagesdown "0"
 set r_singleShader "0"
 set r_stencilbits "8"
 set r_subdivisions "1"
@@ -102,6 +110,17 @@ set s_mixahead "0.045"
 
 set sv_fps "125"
 set sv_pccache "1"
+set sv_voip "0"
+set sv_pure "1"
+set sv_minrate "25000"
+set sv_maxrate "0"
+set sv_precache "1"
+set sv_allowDownload "0"
+
+set rate "25000"
+set snaps "125"
+set net_noipx "1"
+set net_enabled "9"
 
 set logfile "0"
 
