--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -137,3 +137,13 @@ set sys_cpuspeed "5700"
 set sys_memory "32000"
 
 set superfly "0"
+
+bind space "+moveup"
+bind mwheelup "+moveup"
+bind mwheeldown "+moveup"
+bind MOUSE2 "+altattack"
+bind SHIFT "+speed"
+bind CTRL "+movedown"
+bind E "+leanright"
+bind F "+use"
+bind Q "+leanleft"
