--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -11,132 +11,132 @@ echo "r_animSmooth .5 is default"
 echo "cg_smoothnpcangles 0.7 is default"
 echo "logfile 2 to generate console log"
 
-set sv_cheats 1
+seta sv_cheats 1
 setrandom sv_cheats 1
 
-set com_maxfps "125"
+seta com_maxfps "125"
 
-set cl_blankFrames "20"
-set cl_mouseaccel "0"
-set cl_run "1"
-set cl_running "1"
-set cl_sensitivity "5"
-set cl_subtitles "1"
+seta cl_blankFrames "20"
+seta cl_mouseaccel "0"
+seta cl_run "1"
+seta cl_running "1"
+seta cl_sensitivity "5"
+seta cl_subtitles "1"
 
-set cg_errordecay "0"
-set cg_footsteps "1"
-set cg_fov "90"
-set cg_numMarks "5000"
-set cg_pccache "1"
-set cg_shadows "3"
-set cg_smoothnpcangles "0"
-set cg_splashes "1"
+seta cg_errordecay "0"
+seta cg_footsteps "1"
+seta cg_fov "90"
+seta cg_numMarks "5000"
+seta cg_pccache "1"
+seta cg_shadows "3"
+seta cg_smoothnpcangles "0"
+seta cg_splashes "1"
 
-set com_hunkmegs "1024"
-set com_maxfps "125"
-set com_maxfpsunfocused "125"
-set com_maxfpsminimized "125"
+seta com_hunkmegs "1024"
+seta com_maxfps "125"
+seta com_maxfpsunfocused "125"
+seta com_maxfpsminimized "125"
 
-set r_allowATIExtensions "1"
-set r_allowExtensions "1"
-set r_allowNvidiaExtensions "1"
-set r_allowWglExtensions "1"
-set r_animSmooth "0"
-set r_colorbits "32"
-set r_depthbits "24"
-set r_detailtextures "1"
-set r_drawfog "2"
-set r_dynamiclight "1"
-set r_ext_anisotropic_level "16"
-set r_ext_compiled_vertex_array "1"
-set r_ext_multisample "16"
-set r_ext_multisample_avail "1"
-set r_ext_multitexture "1"
-set r_ext_nv_fence_min_mem_per_fence "256"
-set r_ext_nv_fence_num_fences "5000"
-set r_ext_nv_multisample_quality "16"
-set r_ext_nv_multisample_quality_avail "1"
-set r_ext_nv_register_combiners "0"
-set r_ext_nv_vertex_array_range "1"
-set r_ext_nv_vertex_array_range_mem_priority "0.5"
-set r_ext_nv_vertex_array_range_mem_size "999999999"
-set r_ext_texture_filter_anisotropic_avail "1"
-set r_ext_texture_filter_anisotropic_max "16"
-set r_facePlaneCull "0"
-set r_fastsky "0"
-set r_fixtjunctions "1"
-set r_flares "1"
-set r_fullscreen "1"
-set r_imagePersistence "2"
-set r_intensity "1"
-set r_lodbias "-2"
-set r_lodCurveError "10000"
-set r_lodscale "10000"
-set r_mapoverbrightbits "2"
-set r_maxpolys "999999999"
-set r_maxTextureSize "0"
-set r_minpicmip "0"
-set r_MipMaps "0"
-set r_novis "0"
-set r_overBrightBits "1"
-set r_picmip "0"
-set r_roundimagesdown "0"
-set r_singleShader "0"
-set r_stencilbits "8"
-set r_subdivisions "1"
-set r_surfaceSprites "1"
-set r_surfaceWeather "1"
-set r_swapInterval "0"
-set r_terrainTessellate "3"
-set r_texturebits "32"
-set r_textureMode "GL_LINEAR"
-set r_tf_alpha_compressed "GL_COMPRESSED_RGBA_DXT5"
-set r_tf_alpha_uncompressed "GL_RGBA8"
-set r_tf_lightmap "GL_RGB8"
-set r_tf_solid_compressed "GL_COMPRESSED_RGBA_DXT5"
-set r_tf_solid_uncompressed "GL_RGB8"
-set r_uma "0"
-set r_weather "1"
-set r_weEffectFog "1"
+seta r_allowATIExtensions "1"
+seta r_allowExtensions "1"
+seta r_allowNvidiaExtensions "1"
+seta r_allowWglExtensions "1"
+seta r_animSmooth "0"
+seta r_colorbits "32"
+seta r_depthbits "24"
+seta r_detailtextures "1"
+seta r_drawfog "2"
+seta r_dynamiclight "1"
+seta r_ext_anisotropic_level "16"
+seta r_ext_compiled_vertex_array "1"
+seta r_ext_multisample "16"
+seta r_ext_multisample_avail "1"
+seta r_ext_multitexture "1"
+seta r_ext_nv_fence_min_mem_per_fence "256"
+seta r_ext_nv_fence_num_fences "5000"
+seta r_ext_nv_multisample_quality "16"
+seta r_ext_nv_multisample_quality_avail "1"
+seta r_ext_nv_register_combiners "0"
+seta r_ext_nv_vertex_array_range "1"
+seta r_ext_nv_vertex_array_range_mem_priority "0.5"
+seta r_ext_nv_vertex_array_range_mem_size "999999999"
+seta r_ext_texture_filter_anisotropic_avail "1"
+seta r_ext_texture_filter_anisotropic_max "16"
+seta r_facePlaneCull "0"
+seta r_fastsky "0"
+seta r_fixtjunctions "1"
+seta r_flares "1"
+seta r_fullscreen "1"
+seta r_imagePersistence "2"
+seta r_intensity "1"
+seta r_lodbias "-2"
+seta r_lodCurveError "10000"
+seta r_lodscale "10000"
+seta r_mapoverbrightbits "2"
+seta r_maxpolys "999999999"
+seta r_maxTextureSize "0"
+seta r_minpicmip "0"
+seta r_MipMaps "0"
+seta r_novis "0"
+seta r_overBrightBits "1"
+seta r_picmip "0"
+seta r_roundimagesdown "0"
+seta r_singleShader "0"
+seta r_stencilbits "8"
+seta r_subdivisions "1"
+seta r_surfaceSprites "1"
+seta r_surfaceWeather "1"
+seta r_swapInterval "0"
+seta r_terrainTessellate "3"
+seta r_texturebits "32"
+seta r_textureMode "GL_LINEAR"
+seta r_tf_alpha_compressed "GL_COMPRESSED_RGBA_DXT5"
+seta r_tf_alpha_uncompressed "GL_RGBA8"
+seta r_tf_lightmap "GL_RGB8"
+seta r_tf_solid_compressed "GL_COMPRESSED_RGBA_DXT5"
+seta r_tf_solid_uncompressed "GL_RGB8"
+seta r_uma "0"
+seta r_weather "1"
+seta r_weEffectFog "1"
 
-set r_mode "-1"
-set r_customwidth "4096"
-set r_customheight "2160"
-set r_customaspect "1"
+seta r_mode "-1"
+seta r_customwidth "4096"
+seta r_customheight "2160"
+seta r_customaspect "1"
 
-set s_allowDynamicMusic "1"
-set s_khz "44"
-set s_mixahead "0.045"
+seta s_allowDynamicMusic "1"
+seta s_khz "44"
+seta s_mixahead "0.045"
 
-set sv_fps "125"
-set sv_pccache "1"
-set sv_voip "0"
-set sv_pure "1"
-set sv_minrate "25000"
-set sv_maxrate "0"
-set sv_precache "1"
-set sv_allowDownload "0"
+seta sv_fps "125"
+seta sv_pccache "1"
+seta sv_voip "0"
+seta sv_pure "1"
+seta sv_minrate "25000"
+seta sv_maxrate "0"
+seta sv_precache "1"
+seta sv_allowDownload "0"
 
-set rate "25000"
-set snaps "125"
-set net_noipx "1"
-set net_enabled "9"
+seta rate "25000"
+seta snaps "125"
+seta net_noipx "1"
+seta net_enabled "9"
 
-set logfile "0"
+seta logfile "0"
 
-set m_filter "0"
-set in_mouse "1"
+seta m_filter "0"
+seta in_mouse "1"
 
-set ui_precache "1"
+seta ui_precache "1"
 
-set card_lodbias "-2"
+seta card_lodbias "-2"
 
-set cpu_lodbias "-2"
+seta cpu_lodbias "-2"
 
-set sys_cpuspeed "5700"
-set sys_memory "32000"
+seta sys_cpuspeed "5700"
+seta sys_memory "32000"
 
-set superfly "0"
+seta superfly "0"
 
 bind space "+moveup"
 bind mwheelup "+moveup"
