--- a/The Wheel of Time/WoTHQ.ini
+++ b/The Wheel of Time/WoTHQ.ini
@@ -226,13 +226,13 @@ ShinySurfaces=True
 Coronas=True
 HighDetailActors=True
 DetailBias=-1.500000
-RefreshRate=120Hz
+RefreshRate=60Hz
 DetailTextures=True
 FastUglyRefresh=False
 ScreenSmoothing=True
 Resolution=Default
 DescFlags=1
-DisableVSync=True
+DisableVSync=False
 Description=3dfx Voodoo3
 
 [MetalDrv.MetalRenderDevice]
