--- a/Thief: The Dark Project/cam_ext.cfg
+++ b/Thief: The Dark Project/cam_ext.cfg
@@ -28,13 +28,13 @@ ui_scale_mode 2
 ; in-game and in menu screens. To disable synch, set mode 0.
 ; NOTE: certain graphics driver settings may override synch behavior of the game
 ; NOTE2: synch support in windowed mode with "use_d3d_display", may depend on Windows version and settings
-;vsync_mode 0
+vsync_mode 0
 ; for displays with really high refresh rates (like 120 Hz) the game might be running too fast,
 ; try following mode to make the game update every second display refresh (if supported by the card/driver)
 ;vsync_mode 7
 
 ; software based framerate limiter (in "single_display_mode")
-framerate_cap 100.0
+framerate_cap 60.0
 
 ; use 32-bit rendering for everything (also filters out 16-bit video modes)
 ; (this is automatically enabled with "use_d3d_display", which doesn't support 16-bit modes)
