--- a/Thief: The Dark Project/cam_ext.cfg
+++ b/Thief: The Dark Project/cam_ext.cfg
@@ -212,7 +212,7 @@ multisampletype 8
 
 ; enable 16-bit floating point render buffer (for improved rendering and postprocessing quality, at the
 ; expense of video memory and performance, note that it doesn't enable actual HDR rendering)
-d3d_disp_enable_hdr
+;d3d_disp_enable_hdr
 ; enable 32-bit floating point render buffer (if you don't know what else to do with your memory and GPU time)
 ; NOTE: some driver version(s) may have a bug where running 32-bit FP also requires multisampling to be enabled
 ;       or things can break (like a black screen)
