--- a/System Shock 2/cam_ext.cfg
+++ b/System Shock 2/cam_ext.cfg
@@ -56,7 +56,7 @@ d3d_disp_limit_gpu_frames 1 1
 ; enable scaling of in-game 2D overlay (HUD), makes the things like current item/weapon text, or SS2
 ; HUD/panels, larger at resolutions of 1280x960 or higher with pixel perfect scaling (requires "use_d3d_display")
 ; NOTE: Enabling scaling may actually improve performance, especially at high resolutions.
-d3d_disp_scaled_2d_overlay 64
+;d3d_disp_scaled_2d_overlay 64
 ; alternatively a fixed 2D resolution can be defined, which is aspect ratio corrected and scaled up
 ; to the current resolution, without enforcing pixel perfectness (ie. filtering makes it a bit less crisp)
 ;d3d_disp_scaled_2d_overlay 640 480
@@ -153,7 +153,7 @@ tex_filter_mode 16
 tex_filter_trilinear
 
 ; adjust the distance factor at which lower mip maps are selected by HW (a value between -16.0 and 16.0)
-;mipmap_bias -1.0
+mipmap_bias -1.0
 
 ; use linear filtering for lightmaps (not using anisotropic combined with other lm_ settings may help reduce
 ; light bleeding artifacts)
@@ -165,7 +165,7 @@ tex_edge_padding 2
 
 ; edge padding size can be adjusted to increase quality of lower mipmaps (larger pad size) or to reduce the
 ; amount of processing during load (smaller pad size)
-;tex_max_edge_padding 8
+tex_max_edge_padding 64
 
 ; --------------
 ; render options
@@ -187,12 +187,12 @@ pixel_parts_as_disks
 
 ; increased max view distance (default is 256) so z-buffering works correctly on missions with large areas
 ; (individual missions may set an even larger view distance if the mission requires it)
-z_far 512
+z_far 1024
 
 ; enable z-compare during level geometry rendering, this allows somewhat more optimal level geometry rendering
 ; (missions that weren't built with new sky support in mind, may have visual glitches in locations that have
 ; "impossible geometry" when this option is enabled)
-;wr_render_zcomp
+wr_render_zcomp
 
 ; -------------------
 ; D3D9 render options
@@ -209,7 +209,7 @@ z_far 512
 ; multisampling (anti-aliasing) level
 ; IMPORTANT: some integrated graphics HW may not work correctly with multisampling and you will be left with a
 ;            black screen, if that happens disable this option again
-multisampletype 0
+multisampletype 8
 
 ; enable 16-bit floating point render buffer (for improved rendering and postprocessing quality, at the
 ; expense of video memory and performance, note that it doesn't enable actual HDR rendering)
@@ -260,11 +260,11 @@ d3d_disp_enable_distortionfx
 ;d3d_disp_enable_atoc 1
 ; for nVidia cards that support SSAA this can be enabled instead (slightly better quality at the expense of
 ; performance)
-;d3d_disp_enable_atoc 2
+d3d_disp_enable_atoc 2
 ; if "d3d_disp_enable_atoc" is enabled and the graphics card supports it you may also want to enable this to
 ; make the edges even smoother (WARNING: if atoc isn't supported or "tex_edge_padding" isn't enabled, enabling
 ; this will make things look worse)
-;default_alphatest_ref 1
+default_alphatest_ref 1
 
 ; alpha for 2D overlay (HUD text, bitmaps), default is 1 (opaque)
 ;d3d_disp_2d_overlay_alpha 0.7
@@ -290,11 +290,11 @@ use_hi_res_timer
 ; set minimum frame time value to 1ms to avoid speedups at high framerates, this does NOT cap the framerate
 ; it only sets the lower frame time limit so that if a frame is shorter than this, the engine will pretend
 ; that it was this long
-;min_frame_time 1
+min_frame_time 1
 
 ; cap engine update frequency to 250 Hz (specified as min updated time in ms), for a software framerate cap when
 ; using "single_display_mode" it's probably better to use "framerate_cap", this is just a last resort cap
-;SlowFrame 4
+SlowFrame 4
 
 ; -------------
 ; sound options
