--- a/Vampire: The Masquerade - Bloodlines/autoexec.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexec.cfg
@@ -25,3 +25,6 @@ cl_v_image_quality "1"
 cl_v_lighting "0"
 cl_v_shadow_count "2"
 cl_v_shadows "3"
+clientport "65007"
+disable_expressions "0"
+dsp_dist_max "999999999"
