--- a/Vampire: The Masquerade - Bloodlines/autoexec.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexec.cfg
@@ -28,3 +28,6 @@ cl_v_shadows "3"
 clientport "65007"
 disable_expressions "0"
 dsp_dist_max "999999999"
+fog_enable "1"
+fog_enableskybox "1"
+fps_max "999"
