--- a/Vampire: The Masquerade - Bloodlines/autoexec.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexec.cfg
@@ -34,3 +34,64 @@ fps_max "999"
 hud_fastswitch "0"
 joystick "0"
 m_filter "0"
+mat_aaquality "4"
+mat_alphacoverage "1"
+mat_antialias "8"
+mat_bufferprimitives "1"
+mat_bumpmap "1"
+mat_clipz "0"
+mat_colorcorrection "1"
+mat_colcorrection_disableentities "0"
+mat_camerarendertargetoverlaysize "8192"
+mat_disable_bloom "0"
+mat_disable_fancy_blending "0"
+mat_envmapsize "8192"
+mat_envmaptgasize "8192"
+mat_forceaniso "16"
+mat_forcemanagedtextureintohardware "0"
+mat_framebuffercopyoverlaysize "8192"
+mat_levelflush "1"
+mat_max_worldmesh_vertices "999999999"
+mat_maxframelatency "0"
+mat_mipmaptextures "1"
+mat_motion_blur_enabled "0"
+mat_parallaxmap "1"
+mat_phong "1"
+mat_picmip "-10"
+mat_postprocess_x "16"
+mat_postprocess_y "16"
+mat_queue_mode "2"
+mat_reducefillrate "0"
+mat_reduceparticles "0"
+mat_shadowstate "1"
+mat_software_aa_quality "0"
+mat_software_aa_strength_vgui "0"
+mat_software_aa_strength "0"
+mat_specular "1"
+mat_texture_reload_frame_swap_workaround "0"
+mat_tonemapping_occlusion_use_stencil "1"
+mat_trilinear "1"
+mat_vsync "0"
+mat_wateroverlaysize "8192"
+mp_decals "4096"
+particles_disable_cull "1"
+particles_disable_rendering "0"
+particles_disable_updates "0"
+particles_dump "0"
+particles_enable_precipitation "1"
+particles_force_cull "0"
+perf_depthcomplexity "5"
+perf_disptoworldtriratio "4"
+perf_maxhiendmodeltris "999999999"
+perf_maxlightmapmemory "256"
+perf_maxmisctris "999999999"
+perf_maxmodelmemory "512"
+perf_maxtexturememory "1024"
+perf_maxworldtris "999999999"
+perf_newtexturememory "1"
+perf_scenetexhiend "9"
+perf_scenetexlowend "2"
+perf_warninglevel "0"
+perf_worldtexhiend "120"
+perf_worldtexlowend "4"
+port "65006"
