--- a/Vampire: The Masquerade - Bloodlines/autoexec.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexec.cfg
@@ -95,3 +95,72 @@ perf_warninglevel "0"
 perf_worldtexhiend "120"
 perf_worldtexlowend "15"
 port "65006"
+r_3dsky "1"
+r_avglight "999999999999999999999999999"
+r_cheapwaterend "99999999999999999999"
+r_cheapwaterstart "99999999999999999999"
+r_cloth "1"
+r_decals "4096"
+r_decalstaticprops "1"
+r_disable_highlight "0"
+r_DispEnableLOD "0"
+r_DispLockLOD "0"
+r_DispSetLOD "0"
+r_DispUseStaticMeshes "1"
+r_DrawBeams "1"
+r_drawbrushmodels "1"
+r_drawdecals "1"
+r_DrawDetailProps "1"
+r_DrawDisp "1"
+r_drawdetailprops "1"
+r_drawflecks "1"
+r_drawtracers_firstperson "0"
+r_eyegloss "1"
+r_eyemove "1"
+r_eyes "1"
+r_fastzreject "0"
+r_ForceWaterLeaf "1"
+r_frustumcullworld "0"
+r_glint_procedural "0"
+r_hunkalloclightmaps "1"
+r_lightcache_zbuffercache "1"
+r_flashlightdepthtexture "1"
+r_flashlightrender "1"
+r_flashlightmodels "1"
+r_flashlightculldepth "1"
+r_flashlightscissor "1"
+r_flex "1"
+r_lightcache_zbuffercache "1"
+r_lod "0"
+r_maxdlights "128"
+r_maxmodeldecal "128"
+r_maxnewsamples "9"
+r_maxsampledist "999999999999999999999999999"
+r_minnewsamples "9"
+r_norefresh "1"
+r_novis "0"
+r_occludermincount "1"
+r_occlusion "1"
+r_PhysPropStaticLighting "1"
+r_pixelfog "1"
+r_propsmaxdist "999999999999999999999999999"
+r_queued_decals "0"
+r_queued_post_processing "0"
+r_queued_ropes "1"
+r_radiosity "2"
+r_renderoverlayfragment "1"
+r_shadowmaxrendered "128"
+r_shadowrendertotexture "1"
+r_shader_srgb "0"
+r_shadows "1"
+r_staticprop_lod "0"
+r_teeth "1"
+r_threaded_client_shadow_manager "1"
+r_threaded_particles "1"
+r_threaded_renderables "1"
+r_waterdrawreflection "1"
+r_waterdrawrefraction "1"
+r_waterforceexpensive "1"
+r_waterforcereflectentities "1"
+r_worldlightmin "0.0002"
+r_worldlights "64"
