--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -112,6 +112,20 @@ r_drawbrushmodels "1"
 r_drawdecals "1"
 r_DrawDetailProps "1"
 r_DrawDisp "1"
+r_drawmrmmodels "1"
+r_drawopaquerenderables "1"
+r_drawopaqueworld "1"
+r_DrawParticles "1"
+r_drawropes "1"
+r_drawskybox "1"
+r_drawsprites "1"
+r_drawstaticprops "1"
+r_drawtranslucentrenderables "1"
+r_drawtranslucentworld "1"
+r_drawvgui "1"
+r_drawviewmodel "1"
+r_drawwatersurface "1"
+r_drawworld "1"
 r_drawdetailprops "1"
 r_drawflecks "1"
 r_drawtracers_firstperson "0"
@@ -137,10 +151,12 @@ r_maxmodeldecal "128"
 r_maxnewsamples "9"
 r_maxsampledist "999999999999999999999999999"
 r_minnewsamples "9"
+r_multipasslight "1"
 r_norefresh "1"
 r_novis "0"
 r_occludermincount "1"
 r_occlusion "1"
+r_occlusionglow "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
 r_propsmaxdist "999999999999999999999999999"
