--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -169,11 +169,17 @@ r_shadowmaxrendered "128"
 r_shadowrendertotexture "1"
 r_shader_srgb "0"
 r_shadows "1"
+r_shadowlod "-1"
+r_shadowlodbias "0"
 r_staticprop_lod "0"
 r_teeth "1"
 r_threaded_client_shadow_manager "1"
 r_threaded_particles "1"
 r_threaded_renderables "1"
+r_traceglow "1"
+r_TransitionSensitivity "999999999"
+r_useambientcube "1"
+r_watercullenable "0"
 r_waterdrawreflection "1"
 r_waterdrawrefraction "1"
 r_waterforceexpensive "1"
