--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -186,3 +186,7 @@ r_waterforceexpensive "1"
 r_waterforcereflectentities "1"
 r_worldlightmin "0.0002"
 r_worldlights "64"
+rate "1048576"
+sensitivity "4"
+snd_mixahead "0.045"
+snd_noextraupdate "1"
