--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -169,8 +169,8 @@ r_shadowmaxrendered "128"
 r_shadowrendertotexture "1"
 r_shader_srgb "0"
 r_shadows "1"
-r_shadowlod "-1"
-r_shadowlodbias "0"
+r_shadowlod "0"
+r_shadowlodbias "2"
 r_staticprop_lod "0"
 r_teeth "1"
 r_threaded_client_shadow_manager "1"
@@ -190,3 +190,8 @@ rate "1048576"
 sensitivity "4"
 snd_mixahead "0.045"
 snd_noextraupdate "1"
+sv_allowdownload "0"
+sv_allowupload "0"
+sv_maxupdaterate "101"
+sv_minrate "1048576"
+sv_minupdaterate "101"
