--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -189,9 +189,24 @@ r_worldlights "64"
 rate "1048576"
 sensitivity "4"
 snd_mixahead "0.045"
+snd_pitchquality "1"
+snd_defer_trace "0"
 snd_noextraupdate "1"
+snd_surround_speakers "0"
+sp_decals "4096"
 sv_allowdownload "0"
 sv_allowupload "0"
+sv_maxcmdrate "101"
+sv_maxrate "0"
 sv_maxupdaterate "101"
 sv_minrate "1048576"
+sv_mincmdrate "101"
 sv_minupdaterate "101"
+sv_npc_talker_maxdist "999999999999999999999999999"
+sv_rcon_log "0"
+sv_forcepreload "1"
+sv_logdownloadlist "0"
+sv_logecho "0"
+sv_logfile "0"
+tv_enable "0"
+windows_speaker_config "0"
