--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -10,6 +10,7 @@ cl_detailfade "999999999999999999999999999"
 cl_download_ingame "0"
 cl_ejectbrass "1"
 cl_interp "0.01"
+cl_obfuscate_daylight "0"
 cl_packettrace "0"
 cl_ragdoll_collide "1"
 cl_simpleshadows "0"
@@ -28,6 +29,8 @@ cl_v_shadows "3"
 clientport "65007"
 disable_expressions "0"
 dsp_dist_max "999999999"
+dsp_stereo "1"
+dsp_spatial "42"
 fog_enable "1"
 fog_enableskybox "1"
 fps_max "999"
@@ -101,6 +104,7 @@ r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
 r_cloth "1"
 r_decals "4096"
+r_decaltarget "15000"
 r_decalstaticprops "1"
 r_disable_highlight "0"
 r_DispEnableLOD "0"
@@ -210,3 +214,10 @@ sv_logecho "0"
 sv_logfile "0"
 tv_enable "0"
 windows_speaker_config "0"
+
+alias clothes "cloth_reset"
+alias matclipzon "mat_clipz 1"
+alias matclipzoff "mat_clipz 0"
+alias detailfade "cl_detailfade 999999999999999999999999999"
+alias detaildist "cl_detaildist 999999999999999999999999999"
+alias afterbloodhunthealingscript "blood 1"
