--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -1,4 +1,5 @@
 echo "VampireTMB HQ config"
+echo "r_worldlights 3 and 4 cause blue and buggy textures, 5+ crashes the game"
 
 cl_allowdownload "0"
 cl_allowupload "0"
@@ -189,7 +190,7 @@ r_waterdrawrefraction "1"
 r_waterforceexpensive "1"
 r_waterforcereflectentities "1"
 r_worldlightmin "0.0002"
-r_worldlights "64"
+r_worldlights "2"
 rate "1048576"
 sensitivity "4"
 snd_mixahead "0.045"
