--- a/Thief: The Dark Project/cam_ext.cfg
+++ b/Thief: The Dark Project/cam_ext.cfg
@@ -1,3 +1,5 @@
+; REQUIRES VSYNC TO BE ENABLED SO GAME RUNS AT PROPER SPEED
+;
 ; extended config (currently loaded prior to cam.cfg)
 ;
 ; contains defaults to enable enhancements and other settings to run nicely on modern systems
