--- a/System Shock 2/cam_ext.cfg
+++ b/System Shock 2/cam_ext.cfg
@@ -1,4 +1,7 @@
 ;# SS2 2.48    4/11/2020
+;
+; REQUIRES VSYNC TO BE ENABLED FOR GAME TO RUN AT PROPER SPEED
+;
 ; extended config (currently loaded prior to cam.cfg)
 ;
 ; contains defaults to enable enhancements and other settings to run nicely on modern systems
@@ -29,7 +32,7 @@ ui_scale_mode 2
 ; in-game and in menu screens. To disable synch, set mode 0.
 ; NOTE: certain graphics driver settings may override synch behavior of the game
 ; NOTE2: synch support in windowed mode with "use_d3d_display", may depend on Windows version and settings
-vsync_mode 0
+vsync_mode 3
 ; for displays with really high refresh rates (like 120 Hz) the game might be running too fast,
 ; try following mode to make the game update every second display refresh (if supported by the card/driver)
 ;vsync_mode 7
