--- a/System Shock 2/cam_ext.cfg
+++ b/System Shock 2/cam_ext.cfg
@@ -1,6 +1,6 @@
 ;# SS2 2.48    4/11/2020
 ;
-; REQUIRES VSYNC TO BE ENABLED FOR GAME TO RUN AT PROPER SPEED
+; REQUIRES 60HZ VSYNC TO BE ENABLED FOR GAME TO RUN AT PROPER SPEED
 ;
 ; extended config (currently loaded prior to cam.cfg)
 ;
