--- a/Thief: The Dark Project/cam_ext.cfg
+++ b/Thief: The Dark Project/cam_ext.cfg
@@ -1,4 +1,4 @@
-; REQUIRES VSYNC TO BE ENABLED SO GAME RUNS AT PROPER SPEED
+; REQUIRES 60HZ VSYNC TO BE ENABLED SO GAME RUNS AT PROPER SPEED
 ;
 ; extended config (currently loaded prior to cam.cfg)
 ;
