--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -4,3 +4,23 @@ echo "THE BLOBULATOR"
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_blobulator_freezing_max_metaball_radius "64"
+cl_burninggibs "1"
+cl_cmdrate "128"
+cl_detaildist "999999999999999999999999999"
+cl_detailfade "999999999999999999999999999"
+cl_disable_ragdolls "0"
+cl_disable_water_render_targets "0"
+cl_ejectbrass "1"
+cl_forcepreload "1"
+cl_interp "0.01"
+cl_interp_ratio "1"
+cl_phys_maxticks "101"
+cl_player_fullupdate_predicted_origin_fix "1"
+cl_predict_basetoggles "1"
+cl_predict_catapults "1"
+cl_predict_motioncontrol "0"
+cl_predict_portal_placement "1"
+cl_predict_projected_entities "1"
+cl_predicted_movement_uses_uninterpolated_physics "1"
+cl_ragdoll_collide "1"
+
