--- a/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
+++ b/Vampire: The Masquerade - Bloodlines/autoexecHQ.cfg
@@ -38,6 +38,7 @@ fps_max "999"
 hud_fastswitch "0"
 joystick "0"
 m_filter "0"
+m_mousespeed "0"
 mat_aaquality "4"
 mat_alphacoverage "1"
 mat_antialias "8"
