--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -14,7 +14,7 @@ cl_ejectbrass "1"
 cl_forcepreload "1"
 cl_interp "0.01"
 cl_interp_ratio "1"
-cl_phys_maxticks "101"
+cl_phys_maxticks "128"
 cl_player_fullupdate_predicted_origin_fix "1"
 cl_predict_basetoggles "1"
 cl_predict_catapults "1"
@@ -23,4 +23,192 @@ cl_predict_portal_placement "1"
 cl_predict_projected_entities "1"
 cl_predicted_movement_uses_uninterpolated_physics "1"
 cl_ragdoll_collide "1"
+cl_retire_low_priority_lights "0"
+cl_shadowtextureoverlaysize "8192"
+cl_showhelp "0"
+cl_showpluginmessages "0"
+cl_show_splashes "1"
+cl_smooth "0"
+cl_smoothtime "0.0"
+cl_updaterate "128"
+cl_use_simd_bones "1"
+cl_useoldswapportalvisibilitycode "0"
+cl_vertical_elevator_fix "1"
+clientport "65009"
+con_enable "1"
+datacachesize "256"
+dsp_enhance_stereo "0"
+dsp_slow_cpu "1"
+flex_rules "1"
+flex_smooth "1"
+fast_fogvolume "0"
+fps_max "999"
+fps_max_splitscreen "999"
+gameinstructor_enable "0"
+hud_fastswitch "1"
+joystick "0"
+m_filter "0"
+m_mousespeed "0"
+m_rawinput "1"
+mat_aaquality "4"
+mat_alphacoverage "1"
+mat_antialias "8"
+mat_bufferprimitives "1"
+mat_bumpmap "1"
+mat_clipz "0"
+mat_colorcorrection "1"
+mat_colcorrection_disableentities "0"
+mat_camerarendertargetoverlaysize "8192"
+mat_depthbias_shadowmap "0"
+mat_detail_tex "1"
+mat_disable_bloom "0"
+mat_disable_fancy_blending "0"
+mat_dof_enabled "1"
+mat_dof_quality "12"
+mat_envmapsize "8192"
+mat_envmaptgasize "8192"
+mat_forceaniso "16"
+mat_forcemanagedtextureintohardware "0"
+mat_framebuffercopyoverlaysize "8192"
+mat_grain_enable "0"
+mat_levelflush "1"
+mat_max_worldmesh_vertices "999999999"
+mat_maxframelatency "0"
+mat_motion_blur_enabled "0"
+mat_parallaxmap "1"
+mat_parallaxmapsamplesmax "999999999"
+mat_parallaxmapsamplesmin "50"
+mat_phong "1"
+mat_picmip "-10"
+mat_postprocess_x "16"
+mat_postprocess_y "16"
+mat_queue_mode "2"
+mat_reducefillrate "0"
+mat_reduceparticles "0"
+mat_software_aa_quality "0"
+mat_software_aa_strength_vgui "0"
+mat_software_aa_strength "0"
+mat_specular "1"
+mat_texture_reload_frame_swap_workaround "0"
+mat_tonemapping_occlusion_use_stencil "1"
+mat_trilinear "1"
+mat_triplebuffered "0"
+mat_vsync "0"
+mat_wateroverlaysize "8192"
+muzzleflash_light "1"
+mp_decals "4096"
+net_compresspackets_minsize "1260"
+net_maxfragments "1260"
+net_maxroutable "1260"
+net_maxpacketdrop "0"
+r_avglight "999999999999999999999999999"
+r_cheapwaterend "99999999999999999999"
+r_cheapwaterstart "99999999999999999999"
+r_decals "4096"
+r_decalstaticprops "1"
+r_drawdetailprops "1"
+r_drawflecks "1"
+r_drawtracers_firstperson "1"
+r_eyegloss "1"
+r_eyemove "1"
+r_eyes "1"
+r_fastzreject "0"
+r_ForceWaterLeaf "1"
+r_frustumcullworld "0"
+r_glint_procedural "0"
+r_hunkalloclightmaps "1"
+r_lightaverage "1"
+r_lightcache_zbuffercache "1"
+r_flashlightdepthtexture "1"
+r_flashlightrender "1"
+r_flashlightmodels "1"
+r_flashlightculldepth "1"
+r_flashlightscissor "1"
+r_flex "1"
+r_jiggle_bones "1"
+r_lightcache_zbuffercache "1"
+r_lod "0"
+r_maxdlights "128"
+r_maxmodeldecal "128"
+r_maxnewsamples "9"
+r_maxsampledist "999999999999999999999999999"
+r_minnewsamples "9"
+r_norefresh "1"
+r_novis "0"
+r_occludermincount "1"
+r_occlusion "1"
+r_PhysPropStaticLighting "1"
+r_pixelfog "1"
+r_portal_use_dlights "1"
+r_propsmaxdist "999999999999999999999999999"
+r_queued_decals "0"
+r_queued_post_processing "0"
+r_queued_ropes "1"
+r_radiosity "2"
+r_renderoverlayfragment "1"
+r_shadowmaxrendered "128"
+r_shadowrendertotexture "1"
+r_shadow_deferred_downsample "0"
+r_shader_srgb "0"
+r_shadows "1"
+r_shadows_on_renderables_enable "1"
+r_staticprop_lod "0"
+r_teeth "1"
+r_threaded_client_shadow_manager "1"
+r_threaded_particles "1"
+r_threaded_renderables "1"
+r_threaded_blobulator "1"
+r_threaded_shadow_clip "1"
+r_threadeddetailprops "1"
+r_waterdrawreflection "1"
+r_waterdrawrefraction "1"
+r_waterforceexpensive "1"
+r_waterforcereflectentities "1"
+r_worldlightmin "0.0002"
+r_worldlights "64"
+rate "1048576"
+rope_collide "1"
+rope_smooth "0"
+rope_shake "0"
+rope_subdiv "999999999999999999999999999"
+rope_wind_dist "999999999999999999999999999"
+sensitivity "4"
+sc_enable "0"
+sc_enable2 "0"
+snd_async_fullyasync "1"
+snd_mixahead "0.045"
+snd_pitchquality "1"
+snd_defer_trace "0"
+snd_disable_mixer_duck "0"
+snd_noextraupdate "1"
+snd_async_spew_blocking "0"
+snd_surround_speakers "0"
+sp_decals "4096"
+sv_allowdownload "0"
+sv_allowupload "0"
+sv_allow_voice_from_file "0"
+sv_allow_votes "0"
+sv_allow_wait_command "0"
+sv_forcepreload "1"
+sv_lan "1"
+sv_logdownloadlist "0"
+sv_logecho "0"
+sv_logfile "0"
+sv_maxcmdrate "128"
+sv_maxrate "0"
+sv_maxupdaterate "128"
+sv_mincmdrate "128"
+sv_minrate "1048576"
+sv_minupdaterate "128"
+sv_npc_talker_maxdist "999999999999999999999999999"
+sv_rcon_log "0"
+sv_unlockedchapters "99"
+sv_vote_allow_spectators "0"
+sv_client_max_interp_ratio "1"
+sv_client_min_interp_ratio "1"
+sv_disablefreezecam "1"
+tv_enable "0"
+windows_speaker_config "0"
 
+bind mwheelup "+jump"
+bind mwheeldown "+jump"
