--- a/Portal/autoexecHQ.cfg
+++ b/Portal/autoexecHQ.cfg
@@ -84,6 +84,7 @@ fps_max "999"
 fx_drawimpactdebris "1"
 fx_drawimpactdust "1"
 fx_drawmetalspark "1"
+gameinstructor_enable "0"
 gl_swaptear "0"
 gl_paircache_ways_lg2 "16"
 gl_batch_tex_creates "1"
@@ -155,6 +156,7 @@ net_maxroutable "1260"
 net_maxpacketdrop "0"
 mp_decals "999999999999999999999999999"
 name "TyranT🜨"
+portal_draw_ghosting "1"
 r_avglight "999999999999999999999999999"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
@@ -191,6 +193,8 @@ r_occludermincount "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
+r_portal_use_dlights "1"
+r_portal_use_pvs_optimization "0"
 r_propsmaxdist "999999999999999999999999999"
 r_queued_decals "0"
 r_queued_post_processing "0"
@@ -233,6 +237,7 @@ sv_allowupload "0"
 sv_allow_voice_from_file "0"
 sv_allow_votes "0"
 sv_allow_wait_command "0"
+sv_enableholdrotation "1"
 sv_forcepreload "1"
 sv_lan "1"
 sv_logdownloadlist "0"
@@ -245,6 +250,8 @@ sv_mincmdrate "128"
 sv_minrate "1048576"
 sv_minupdaterate "128"
 sv_npc_talker_maxdist "999999999999999999999999999"
+sv_player_funnel_into_portals "1"
+sv_props_funnel_into_portals "1"
 sv_rcon_log "0"
 sv_unlockedchapters "99"
 sv_vote_allow_spectators "0"
