--- a/Portal/autoexecHQ.cfg
+++ b/Portal/autoexecHQ.cfg
@@ -193,6 +193,7 @@ r_occludermincount "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
+r_portal_stencil_depth "9"
 r_portal_use_dlights "1"
 r_portal_use_pvs_optimization "0"
 r_propsmaxdist "999999999999999999999999999"
