--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -101,6 +101,8 @@ net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
 net_maxpacketdrop "0"
+portal_viewmodel_use_dlight "1"
+portal_transmit_light "1"
 r_avglight "999999999999999999999999999"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
@@ -139,17 +141,21 @@ r_occludermincount "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
+r_portal_stencil_depth "9"
 r_portal_use_dlights "1"
 r_propsmaxdist "999999999999999999999999999"
 r_queued_decals "0"
 r_queued_post_processing "0"
 r_queued_ropes "1"
 r_radiosity "2"
+r_rainradius "8196"
+r_rainsplashpercentage "100"
 r_renderoverlayfragment "1"
 r_shadowmaxrendered "128"
 r_shadowrendertotexture "1"
 r_shadow_deferred_downsample "0"
 r_shader_srgb "0"
+r_shadowrendertotexture "1"
 r_shadows "1"
 r_shadows_on_renderables_enable "1"
 r_staticprop_lod "0"
