--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -1,20 +1,21 @@
 echo "PORTAL 2 HIGH QUALITY CONFIG"
 echo "THE BLOBULATOR"
+echo "cl_updaterate 30 and cl_cmdrate 60 is max for Portal 2"
 
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_blobulator_freezing_max_metaball_radius "64"
 cl_burninggibs "1"
-cl_cmdrate "128"
+cl_cmdrate "61"
 cl_detaildist "999999999999999999999999999"
 cl_detailfade "999999999999999999999999999"
 cl_disable_ragdolls "0"
 cl_disable_water_render_targets "0"
 cl_ejectbrass "1"
 cl_forcepreload "1"
-cl_interp "0.01"
+cl_interp "0.1"
 cl_interp_ratio "1"
-cl_phys_maxticks "2"
+cl_phys_maxticks "30"
 cl_player_fullupdate_predicted_origin_fix "1"
 cl_predict_basetoggles "1"
 cl_predict_catapults "1"
@@ -30,7 +31,7 @@ cl_showpluginmessages "0"
 cl_show_splashes "1"
 cl_smooth "0"
 cl_smoothtime "0.0"
-cl_updaterate "128"
+cl_updaterate "31"
 cl_use_simd_bones "1"
 cl_useoldswapportalvisibilitycode "0"
 cl_vertical_elevator_fix "1"
