--- a/System Shock 2/cam_ext.cfg
+++ b/System Shock 2/cam_ext.cfg
@@ -26,7 +26,7 @@ single_display_mode 2
 ; scale menu system to fit screen (in "single_display_mode") using 3D HW for best quality
 ; (if you're having trouble like a black screen when starting the game try mode 0 or 1)
 ; when "use_d3d_display" is enabled, 3D HW is always used, this only sets the scale mode to fit screen
-ui_scale_mode 2
+;ui_scale_mode 2
 
 ; display refresh synchronization mode (in "single_display_mode"), default is 3 which means enabled
 ; in-game and in menu screens. To disable synch, set mode 0.
