--- a/System Shock 2/cam_ext.cfg
+++ b/System Shock 2/cam_ext.cfg
@@ -73,7 +73,7 @@ d3d_disp_limit_gpu_frames 1 1
 
 ; FOV, specified for reference 4:3 aspect ratio, widescreen automatically adjusts this value
 ; (default is 90)
-fov 90
+;fov 90
 
 ; up to 8 user defined display modes, if you want some resolution that isn't supported by default
 ; format: <width> <height> [ <bitsPerPixel> [ <aspectX> <aspectY> ] ]
