--- a/Thief II: The Metal Age/cam_ext.cfg
+++ b/Thief II: The Metal Age/cam_ext.cfg
@@ -221,7 +221,7 @@ d3d_disp_enable_hdr 32
 
 ; enable software (ie. shader) based gamma and color processing (improves quality at the expense of performance,
 ; and also enables in-game gamma to be applied in windowed mode)
-d3d_disp_sw_cc
+;d3d_disp_sw_cc
 
 ; optional saturation setting when "d3d_disp_sw_cc" is enabled, 0 is black and white, 1 is normal color
 ; (does not affect menu screens)
