--- a/Thief II: The Metal Age/cam_ext.cfg
+++ b/Thief II: The Metal Age/cam_ext.cfg
@@ -1,3 +1,4 @@
+; REQUIRES 60HZ VSYNC TO BE ENABLED FOR GAME TO RUN AT PROPER SPEED
 ; extended config (currently loaded prior to cam.cfg)
 ;
 ; contains defaults to enable enhancements and other settings to run nicely on modern systems
@@ -370,7 +371,7 @@ ddf_tex_override
 ; -------------
 
 ; enable new mantling code
-;new_mantle
+new_mantle
 
 
 ; render particle effects attached to weapons (i.e. fire arrows before being fired)
