--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -4,7 +4,8 @@ echo "cl_csm_debug_culling_cascade -1 is default value"
 echo "cl_csm_debug_render_ztest 1 is default value"
 echo "cl_csm_debug_vis_hi_range 1 is default value"
 echo "cl_csm_max_shadow_dist -1 is default value"
-
+echo "cl_csm_viz_numplanes -1 is default value"
+echo "cl_csm_viz_polyhedron_quad_size 131072 is default value"
 
 autoaim_max_deflect "0"
 autoaim_max_dist "0"
@@ -41,3 +42,17 @@ cl_csm_optimize_static_props "0"
 cl_csm_print_culling_planes "0"
 cl_csm_qualitymode "4"
 cl_csm_rope_shadows "1"
+cl_csm_shadows "1"
+cl_csm_sprite_shadows "1"
+cl_csm_static_prop_shadows "1"
+cl_csm_translucent_shadows "1"
+cl_csm_translucent_shadows_using_opaque_path "1"
+cl_csm_use_env_light_direction "1"
+cl_csm_use_forced_view_matrices "1"
+cl_csm_viewmodel_max_shadow_dist "999999999"
+cl_csm_viewmodel_max_visible_dist "999999999"
+cl_csm_viewmodel_shadows "1"
+cl_csm_viz_numplanes "999999999999999999999999999"
+cl_csm_viz_polyhedron_quad_size "524288"
+cl_csm_world_shadows "1"
+cl_csm_xlat_continuity "1"
